--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,52 @@
+/*icomoon fonts*/
+@font-face {
+  font-family: 'icomoon';
+  src:url('../fonts/icomoon.eot?623lgg');
+  src:url('../fonts/icomoon.eot?623lgg#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?623lgg') format('truetype'),
+    url('../fonts/icomoon.woff?623lgg') format('woff'),
+    url('../fonts/icomoon.svg?623lgg#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-envelop:before {
+  content: "\e945";
+}
+.icon-location:before {
+  content: "\e947";
+}
+.icon-gift:before {
+  content: "\e99f";
+}
+.icon-smile:before {
+  content: "\e9e1";
+}
+.icon-facebook2:before {
+  content: "\ea8d";
+}
+.icon-instagram:before {
+  content: "\ea90";
+}
+.icon-twitter:before {
+  content: "\ea91";
+}
+
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
 html {
@@ -54,7 +103,6 @@ body {
    ============== */
 
 .main {
-  padding: 30px 0;
 }
 
 .main article h1 {
@@ -105,7 +153,33 @@ body {
 }
 
 .title {
+  position: absolute;
   color: white;
+  top: 0.25em;
+  font-size: 1.25em;
+  left: 7em;
+  z-index: 100;
+  font-weight: 300;
+}
+.header_banner {
+  margin: auto;
+  position: relative;
+  height: 13em;
+  width: 38em;
+}
+.logo_img {
+  width: 12em;
+  position: absolute;
+  top: 1em;
+  left: 0;
+  z-index: 0;
+}
+.donate_img {
+  width: 12em;
+  position: absolute;
+  right: 1em;
+  top: 1em;
+  z-index: 0;
 }
 .header_h2 {
   text-transform: uppercase;
@@ -133,18 +207,28 @@ a {
   text-decoration: none;
   color: white;
 }
+.section_inset {
+  width: 90%;
+  margin: 1em 5%;
+}
+.section_wrapper {
+  width: 90%;
+  padding: 1em 5%;
+}
 
 .social-links {
   background-color: #231F20;
   text-align: center;
+  height: 1.5em;
+  padding: 0.5em 0;
 }
 .social-links a {
   color: white;
   font-size: 1.25em;
-  margin-top: 20px;
+  margin: 0 0.5em;
 }
 .button-link {
-  width: 10em;
+  width: 11em;
   padding: 0.5em;
   background-color: #AA1E2A;
   text-transform: uppercase;
@@ -152,6 +236,17 @@ a {
   text-align: center;
   display: inline-block;
   font-weight: 600;
+}
+.donation-drive_section .button-link {
+  margin: 2em 0.25em;
+}
+.about_all-cycles {
+  max-width: 38em;
+  margin: 0 auto;
+}
+.about_all-cycles p {
+  font-weight: 300;
+  font-size: 1.25em;
 }
 .donation-drive_section {
   text-align: center;
@@ -163,12 +258,45 @@ a {
   margin: 1em 0 0 0;
 }
 .donation-drive_section p {
+  font-size: 1.2em;
+  font-weight: 300;
   margin: 0;
 }
-
 .join_section {
   background: #AA1E2A;
-
+  text-align: center;
+  color: white;
+}
+.join_section h2 {
+  text-transform: uppercase;
+}
+.join_form {
+  width: 28em;
+  margin: 1em auto;
+}
+input, button {
+  border: none;
+}
+input[type="text"] {
+  width: 12em;
+  height: 2.5em;
+  border-radius: 12px;
+  margin: 0 0.25em;
+}
+input[type="email"] {
+  border-radius: 10px;
+  width: 25em;
+  height: 2.5em;
+  margin: 1em;
+}
+.join_button {
+  border-radius: 10px;
+  height: 2.5em;
+  width: 8em;
+  color: white;
+  background-color: #681520;
+  margin-left: 60%;
+  text-transform: uppercase;
 }
 
 
@@ -248,53 +376,4 @@ a {
 
 
 
-
-/*icomoon fonts*/
-@font-face {
-  font-family: 'icomoon';
-  src:url('../fonts/icomoon.eot?623lgg');
-  src:url('../fonts/icomoon.eot?623lgg#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?623lgg') format('truetype'),
-    url('../fonts/icomoon.woff?623lgg') format('woff'),
-    url('../fonts/icomoon.svg?623lgg#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-[class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-envelop:before {
-  content: "\e945";
-}
-.icon-location:before {
-  content: "\e947";
-}
-.icon-gift:before {
-  content: "\e99f";
-}
-.icon-smile:before {
-  content: "\e9e1";
-}
-.icon-facebook2:before {
-  content: "\ea8d";
-}
-.icon-instagram:before {
-  content: "\ea90";
-}
-.icon-twitter:before {
-  content: "\ea91";
-}
 
