--- a/css/main.css
+++ b/css/main.css
@@ -1,52 +1,3 @@
-/*icomoon fonts*/
-@font-face {
-  font-family: 'icomoon';
-  src:url('../fonts/icomoon.eot?623lgg');
-  src:url('../fonts/icomoon.eot?623lgg#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?623lgg') format('truetype'),
-    url('../fonts/icomoon.woff?623lgg') format('woff'),
-    url('../fonts/icomoon.svg?623lgg#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
-[class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-envelop:before {
-  content: "\e945";
-}
-.icon-location:before {
-  content: "\e947";
-}
-.icon-gift:before {
-  content: "\e99f";
-}
-.icon-smile:before {
-  content: "\e9e1";
-}
-.icon-facebook2:before {
-  content: "\ea8d";
-}
-.icon-instagram:before {
-  content: "\ea90";
-}
-.icon-twitter:before {
-  content: "\ea91";
-}
-
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
 html {
@@ -54,32 +5,20 @@ html {
   font-size: 1em;
   line-height: 1.4;
 }
-
 ::-moz-selection {
   background: #b3d4fc;
   text-shadow: none;
 }
-
 ::selection {
   background: #b3d4fc;
   text-shadow: none;
 }
-
-img,
-svg{
+img, svg {
   vertical-align: middle;
 }
-
-fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-
 textarea {
   resize: vertical;
 }
-
 .browserupgrade {
   margin: 0.2em 0;
   background: #ccc;
@@ -88,47 +27,6 @@ textarea {
 }
 
 
-/* ===== Initializr Styles ==================================================
-   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
-   ========================================================================== */
-
-body {
-  font: 16px/26px 'Open Sans', Helvetica, Helvetica Neue, Arial;
-}
-
-
-
-/* ==============
-  MOBILE: Main
-   ============== */
-
-.main {
-}
-
-.main article h1 {
-  font-size: 2em;
-}
-
-.main aside {
-  color: white;
-  padding: 0px 5% 10px;
-}
-
-.footer-container footer {
-  color: white;
-  padding: 20px 0;
-}
-
-/* ===============
-  ALL: IE Fixes
-   =============== */
-
-.ie7 .title {
-  padding-top: 20px;
-}
-
-/* ============= Author's custom styles =========== */
-
 /* ================== colors ====================
 header dark red    #681520
 header/logo red    #AA1E2A
@@ -136,50 +34,32 @@ header/text black  #231F20
 body gray          #F1F2F2
 border gray        #D1D3D4
 */
+
 body {
+  font: 16px/26px 'Open Sans', Helvetica, Helvetica Neue, Arial;
   background-color: #F1F2F2;
 }
 .header-container {
   background-color: #AA1E2A;
 }
-
-.footer-container,
-.main {
+.mobile-hidden {
+  display: none;
+  visibility: hidden;
 }
-
-.footer-container,
-.main aside {
-  background: gray;
-}
-
 .title {
-  position: absolute;
   color: white;
-  top: 0.25em;
-  font-size: 1.25em;
-  left: 7em;
-  z-index: 100;
+  font-size: 1.4em;
   font-weight: 300;
+  margin: 0;
 }
 .header_banner {
-  margin: auto;
-  position: relative;
-  height: 13em;
-  width: 38em;
+  width: 90%;
+  padding: 5%;
+  text-align: center;
 }
 .logo_img {
-  width: 12em;
-  position: absolute;
-  top: 1em;
-  left: 0;
-  z-index: 0;
-}
-.donate_img {
-  width: 12em;
-  position: absolute;
-  right: 1em;
-  top: 1em;
-  z-index: 0;
+  width: 20em;
+  margin: 0 auto;
 }
 .header_h2 {
   text-transform: uppercase;
@@ -190,16 +70,10 @@ body {
   margin: 0 0 0 0;
   padding: 0.75em 0;
 }
-.header_h2 .icon-facebook2 {
-  font-size: 0.8em;
-  padding-right: 0.6em;
+.header_h2 .fa-facebook-square {
+  font-size: 1em;
+  padding-right: 0.5em;
 }
-
-.mobile-hidden {
-  display: none;
-  visibility: hidden;
-}
-
 p, input {
   color: #231F20;
 }
@@ -208,23 +82,23 @@ a {
   color: white;
 }
 .section_inset {
-  width: 90%;
+  width: 80%;
   margin: 1em 5%;
+  padding: 0 5%;
 }
 .section_wrapper {
   width: 90%;
-  padding: 1em 5%;
+  padding: 1.5em 5%;
 }
-
 .social-links {
   background-color: #231F20;
   text-align: center;
-  height: 1.5em;
+  height: 1.75em;
   padding: 0.5em 0;
 }
 .social-links a {
   color: white;
-  font-size: 1.25em;
+  font-size: 1.5em;
   margin: 0 0.5em;
 }
 .button-link {
@@ -237,12 +111,10 @@ a {
   display: inline-block;
   font-weight: 600;
 }
-.donation-drive_section .button-link {
-  margin: 2em 0.25em;
-}
 .about_all-cycles {
-  max-width: 38em;
+  max-width: 40em;
   margin: 0 auto;
+  padding: 0 1em;
 }
 .about_all-cycles p {
   font-weight: 300;
@@ -257,10 +129,13 @@ a {
   color: #AA1E2A;
   margin: 1em 0 0 0;
 }
+.donation-drive_section .button-link {
+  margin: 0 0 0.75em 0;
+}
 .donation-drive_section p {
   font-size: 1.2em;
   font-weight: 300;
-  margin: 0;
+  margin: 0 0 1em 0;
 }
 .join_section {
   background: #AA1E2A;
@@ -271,42 +146,42 @@ a {
   text-transform: uppercase;
 }
 .join_form {
-  width: 28em;
   margin: 1em auto;
+  width: 21em;
+}
+input {
+  font-weight: 300;
+  font-size: 1em;
+  padding: 0 0.5em;
 }
 input, button {
   border: none;
 }
 input[type="text"] {
-  width: 12em;
+  width: 20em;
   height: 2.5em;
   border-radius: 12px;
-  margin: 0 0.25em;
+  margin: 0.5em auto;
 }
 input[type="email"] {
   border-radius: 10px;
-  width: 25em;
+  width: 20em;
   height: 2.5em;
-  margin: 1em;
+  margin: 0.5em auto;
 }
 .join_button {
   border-radius: 10px;
   height: 2.5em;
-  width: 8em;
+  width: 10em;
   color: white;
   background-color: #681520;
-  margin-left: 60%;
+  margin: 0.5em 0 0.5em 10em;
   text-transform: uppercase;
 }
-
-
-
 
 /* ==========================================================================
    Media Queries
    ========================================================================== */
-
-
 
 @media only screen and (min-width: 768px) {
 
@@ -314,66 +189,54 @@ input[type="email"] {
     visibility: visible;
     display: inherit;
   }
-
+  .title {
+    position: absolute;
+    top: 0.25em;
+    left: 7em;
+    z-index: 100;
+    font-size: 1.25em;
+  }
+  .header_banner {
+    margin: auto;
+    position: relative;
+    height: 13em;
+    width: 38em;
+    padding: 0;
+  }
+  .logo_img {
+    width: 12em;
+    position: absolute;
+    top: 1em;
+    left: 0;
+    z-index: 0;
+  }
+  .donate_img {
+    width: 12em;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 0;
+  }
+  .donation-drive_section .button-link {
+    margin: 2em 0;
+  }
+  .donation-drive_section p {
+    margin: 0;
+  }
+  .join_form {
+    width: 28em;
+    margin: 1em auto;
+  }
+  input[type="text"] {
+    width: 11em;
+    margin: 0.5em 0.25em;
+  }
+  input[type="email"] {
+    width: 24em;
+    margin: 0.5em 0;
+  }
+  .join_button {
+    width: 8em;
+    margin: 0.5em 0 0.5em 17em;
+  }
 }
-
-@media only screen and (min-width: 1140px) {
-
-/* ===============
-  Maximal Width
-   =============== */
-
-
-}
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-.hidden {
-  display: none !important;
-  visibility: hidden;
-}
-
-.visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  width: auto;
-}
-
-.invisible {
-  visibility: hidden;
-}
-
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table;
-}
-
-.clearfix:after {
-  clear: both;
-}
-
-.clearfix {
-  *zoom: 1;
-}
-
-
-
-
